[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/title_scene.gd" type="Script" id=1]
[ext_resource path="res://sprites/title_screen.png" type="Texture" id=2]
[ext_resource path="res://resources/claptraps_styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://fonts/eartm.font" type="BitmapFont" id=4]
[ext_resource path="res://music/ct_title.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/redefine_scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/quit_scene.tscn" type="PackedScene" id=7]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="TitleScreen" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
offset = Vector2( 320, 240 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 217.0
margin_right = 640.0
margin_bottom = 479.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="PlayContainer" type="CenterContainer" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="PlayLabel" type="Label" parent="VBoxContainer/PlayContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 294.0
margin_top = 71.0
margin_right = 346.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "PLAY"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="MenuContainer" type="CenterContainer" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 173.0
margin_right = 640.0
margin_bottom = 215.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="MenuLabel" type="Label" parent="VBoxContainer/MenuContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 263.0
margin_top = 7.0
margin_right = 377.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "MENU_USER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="VersionContainer" type="CenterContainer" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 219.0
margin_right = 640.0
margin_bottom = 262.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="VersionLabel" type="Label" parent="VBoxContainer/VersionContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 279.0
margin_top = 8.0
margin_right = 360.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "VERSION"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_styles" ]

[node name="MenuTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="RedefineScreen" parent="." index="4" instance=ExtResource( 6 )]

visible = false

[node name="QuitScreen" parent="." index="5" instance=ExtResource( 7 )]

pause_mode = 2
visible = false
_sections_unfolded = [ "Pause", "Rect" ]

[connection signal="timeout" from="MenuTimer" to="." method="_on_MenuTimer_timeout"]

[connection signal="draw" from="RedefineScreen" to="." method="_on_RedefineScreen_draw"]

[connection signal="draw" from="QuitScreen" to="." method="_on_QuitScreen_draw"]

[connection signal="hide" from="QuitScreen" to="." method="_on_QuitScreen_hide"]


